--- a/semrush/pwaheadcode.html
+++ b/semrush/pwaheadcode.html
@@ -1,9 +1,12 @@
-<!--Per incorporare il nostro manifest.json e iniziare a realizzare la nostra progressive web app, dobbiamo inserire, tra i tag <head> e </head> del sito da trasformare, le seguenti stringhe:-->
+/*Per incorporare il nostro manifest.json e iniziare a realizzare la nostra progressive web app*/
+/*dobbiamo inserire, tra i tag <head> e </head> del sito da trasformare, le seguenti stringhe:*/
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#cc194b"/>
-<!--(Questo ultimo meta tag si inserisce per una questione di compatibilità con alcuni browser che non riuscirebbero a interpretare i colori di base della pwa contenuti nel manifest.json.) Il file manifest.json dovrà essere posizionato nella root principale del sito web, ad esempio https://www.sitoweb.it/manifest.json-->
-<!--Completiamo le operazioni nell’<head> inserendo alcuni meta tag importanti e specifici: Favicon del Sito Web-->
+
+/*Questo ultimo meta tag si inserisce per una questione di compatibilità con alcuni browser che non riuscirebbero a interpretare i colori di base della pwa*/ /*contenuti nel manifest.json.) Il file manifest.json dovrà essere posizionato nella root principale del sito web, ad esempio https://www.sitoweb.i/manifest.json*/
+/*Completiamo le operazioni nell’<head> inserendo alcuni meta tag importanti e specifici: Favicon del Sito Web*/
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 <!--Meta Tag Specifici per iOS-->
 <link rel="apple-touch-icon" href="images/152x152.png">
 <meta name="apple-mobile-web-app-capable" content="yes"> 
